more reliable wizard auto

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,4 +21,6 @@ repositories {
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'com.neovisionaries:nv-websocket-client:2.10'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
+    implementation('com.acmerobotics.dashboard:dashboard:0.4.0')
 }
